ch1 reference fixes, ch2 y2h section and discussion chapter

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -144,7 +144,7 @@ As a further sanity check, we next examined evolutionary conservation and common
 \end{landscape}
 
 
-\subsubsection{An alternative strategy for DMS via tiled regional sequencing}
+\subsection{An alternative strategy for DMS via tiled regional sequencing}
 
 While the DMS-BarSeq approach has many advantages (see Discussion), its performance comes at the cost of producing and maintaining an arrayed clone library, and of determining the full-length sequence of each coding region and barcode for each clone. We therefore investigated an alternative approach called DMS-TileSeq: Instead of tracking the fitness of each individual clone, we carried out \textit{en masse} measurements of the frequency of each variant in the pool before and after selection, by deep sequencing.  Sequencing was carried out for a set of short amplicon tiles that collectively encompass the complete coding region.  In this way, we can discern the impact of each mutation by observing the impact of selection on the abundance of clones carrying this mutation.
 
