--- a/thesis.bib
+++ b/thesis.bib
@@ -2259,3 +2259,46 @@ View full text},
 	pages = {S136--S140},
 	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/7TBATWDK/Cadwell and Joyce - 1994 - Mutagenic PCR..pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/XJKPH362/S136.html:text/html}
 }
+
+@article{edwards_beyond_2013,
+	title = {Beyond {GWASs}: {Illuminating} the {Dark} {Road} from {Association} to {Function}},
+	volume = {93},
+	issn = {0002-9297},
+	shorttitle = {Beyond {GWASs}},
+	url = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3824120/},
+	doi = {10.1016/j.ajhg.2013.10.012},
+	abstract = {Genome-wide association studies (GWASs) have enabled the discovery of common genetic variation contributing to normal and pathological traits and clinical drug responses, but recognizing the precise targets of these associations is now the major challenge. Here, we review recent approaches to the functional follow-up of GWAS loci, including fine mapping of GWAS signal(s), prioritization of putative functional SNPs by the integration of genetic epidemiological and bioinformatic methods, and in vitro and in vivo experimental verification of predicted molecular mechanisms for identifying the targeted genes. The majority of GWAS-identified variants fall in noncoding regions of the genome. Therefore, this review focuses on strategies for assessing likely mechanisms affected by noncoding variants; such mechanisms include transcriptional regulation, noncoding RNA function, and epigenetic regulation. These approaches have already accelerated progress from genetic studies to biological knowledge and might ultimately guide the development of prognostic, preventive, and therapeutic measures.},
+	number = {5},
+	urldate = {2017-03-03},
+	journal = {American Journal of Human Genetics},
+	author = {Edwards, Stacey L. and Beesley, Jonathan and French, Juliet D. and Dunning, Alison M.},
+	month = nov,
+	year = {2013},
+	pmid = {24210251},
+	pmcid = {PMC3824120},
+	pages = {779--797},
+	file = {PubMed Central Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/CA997UK5/Edwards et al. - 2013 - Beyond GWASs Illuminating the Dark Road from Asso.pdf:application/pdf}
+}
+
+@article{richards_standards_2015,
+	title = {Standards and guidelines for the interpretation of sequence variants: a joint consensus recommendation of the {American} {College} of {Medical} {Genetics} and {Genomics} and the {Association} for {Molecular} {Pathology}},
+	volume = {17},
+	copyright = {© 2015 American College of Medical Genetics and Genomics},
+	issn = {1098-3600},
+	shorttitle = {Standards and guidelines for the interpretation of sequence variants},
+	url = {http://www.nature.com/gim/journal/v17/n5/full/gim201530a.html},
+	doi = {10.1038/gim.2015.30},
+	abstract = {Disclaimer: These ACMG Standards and Guidelines were developed primarily as an educational resource for clinical laboratory geneticists to help them provide quality clinical laboratory services. Adherence to these standards and guidelines is voluntary and does not necessarily assure a successful medical outcome. These Standards and Guidelines should not be considered inclusive of all proper procedures and tests or exclusive of other procedures and tests that are reasonably directed to obtaining the same results. In determining the propriety of any specific procedure or test, the clinical laboratory geneticist should apply his or her own professional judgment to the specific circumstances presented by the individual patient or specimen. Clinical laboratory geneticists are encouraged to document in the patient’s record the rationale for the use of a particular procedure or test, whether or not it is in conformance with these Standards and Guidelines. They also are advised to take notice of the date any particular guideline was adopted and to consider other relevant medical and scientific information that becomes available after that date. It also would be prudent to consider whether intellectual property interests may restrict the performance of certain tests and other procedures.
+The American College of Medical Genetics and Genomics (ACMG) previously developed guidance for the interpretation of sequence variants. In the past decade, sequencing technology has evolved rapidly with the advent of high-throughput next-generation sequencing. By adopting and leveraging next-generation sequencing, clinical laboratories are now performing an ever-increasing catalogue of genetic testing spanning genotyping, single genes, gene panels, exomes, genomes, transcriptomes, and epigenetic assays for genetic disorders. By virtue of increased complexity, this shift in genetic testing has been accompanied by new challenges in sequence interpretation. In this context the ACMG convened a workgroup in 2013 comprising representatives from the ACMG, the Association for Molecular Pathology (AMP), and the College of American Pathologists to revisit and revise the standards and guidelines for the interpretation of sequence variants. The group consisted of clinical laboratory directors and clinicians. This report represents expert opinion of the workgroup with input from ACMG, AMP, and College of American Pathologists stakeholders. These recommendations primarily apply to the breadth of genetic tests used in clinical laboratories, including genotyping, single genes, panels, exomes, and genomes. This report recommends the use of specific standard terminology—“pathogenic,” “likely pathogenic,” “uncertain significance,” “likely benign,” and “benign”—to describe variants identified in genes that cause Mendelian disorders. Moreover, this recommendation describes a process for classifying variants into these five categories based on criteria using typical types of variant evidence (e.g., population data, computational data, functional data, segregation data). Because of the increased complexity of analysis and interpretation of clinical genetic testing described in this report, the ACMG strongly recommends that clinical molecular genetic testing should be performed in a Clinical Laboratory Improvement Amendments–approved laboratory, with results interpreted by a board-certified clinical molecular geneticist or molecular genetic pathologist or the equivalent.
+Genet Med 17 5, 405–423.},
+	language = {en},
+	number = {5},
+	urldate = {2017-03-03},
+	journal = {Genetics in Medicine},
+	author = {Richards, Sue and Aziz, Nazneen and Bale, Sherri and Bick, David and Das, Soma and Gastier-Foster, Julie and Grody, Wayne W. and Hegde, Madhuri and Lyon, Elaine and Spector, Elaine and Voelkerding, Karl and Rehm, Heidi L. and Committee, on behalf of the ACMG Laboratory Quality Assurance},
+	month = may,
+	year = {2015},
+	keywords = {ACMG laboratory guideline, clinical genetic testing, interpretation, reporting, sequence, variant reporting, variant terminology},
+	pages = {405--423},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/GTJJUEF6/Richards et al. - 2015 - Standards and guidelines for the interpretation of.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/WSUIUEBN/gim201530a.html:text/html}
+}
