--- a/chapter2.tex
+++ b/chapter2.tex
@@ -266,6 +266,7 @@ To further put our map to the test in a clinical scenario we inquired with Invit
 
 
 \section{Discussion}
+\label{ch2discussion}
 
 In total, this study has produced five maps with functional impacts for 15998 possible missense variants. The functional maps generated for sumoylation pathway members UBE2I and SUMO1 and disease-implicated genes NCS1, CALM1/2/3 and TPK1 using our framework were consistent with biochemical expectations while providing new hypotheses. DMS maps based on functional complementation were highly predictive of disease causing mutations, outperforming computational prediction methods such as PolyPhen-2 or PROVEAN5.  The imputation method we employed allows us to generate complete functional maps while maintaining the reliability on par with the experimental results. 
 
