--- a/conclusion.tex
+++ b/conclusion.tex
@@ -11,32 +11,47 @@ We have evaluated the technical features of the framework on the two sumoylation
 Having validated the framework, we demonstrated its power to detect pathogenic variants in the disease genes \gene{TPK1}, \gene{NCS1}, \gene{CALM1}, \gene{CALM2} and \gene{CALM3}.  
 We found that our Calmodulin map excelled at distinguishing disease-associated variants from benign polymorphisms and greatly outperformed the common prediction algorithms PolyPhen-2 and PROVEAN. We subsequently applied our functional map for \gene{CALM1}, \gene{CALM2} and \gene{CALM3} to classify VUS observed in patients during gene panel sequencing and found our predictions to be closely matching patient indications.
 
-
-\subsection{Using DMS data in a clinical context}
-%DMS in clinical contexts
-% -> limitations (NCS1 )
 \subsubsection{Limitations of the DMS framework}
-%limited number of genes with compl assay
-Despite these successes, there are a number of limitations the current form of our DMS framework. Currently, the number of genes amenable to functional complementation in yeast is very limited. Song Sun and other members of the Roth lab have previously determined that only 60 human disease genes can currently been examined using this assay~\cite{sun_extended_2016}. In addition, we found that some of these genes suffer from mapping quality issues. We observed this issue in the \gene{NCS1} map, which was of lower quality compared to those of other genes due to its wildtype complementation fitness being relatively weak. However it is possible that these assays might be improved by using different yeast strains with different backgrounds or by using different growth conditions.
-% -> cost
-% -> scalability
-% -> Quality control
-% -> Accessibility / Database 
+Despite these successes, there are a number of limitations the current form of our DMS framework. A fairly simple problem is the current restriction to scan relatively short genes. This is due to three reasons: (1) Longer genes would require a re-formulation of the mutagenesis protocol, as the number of mutations introduced per clone can be expected to increase linearly with gene length. This would need to be addressed by varying the concentration of mutant oligos in the amplification step. This could be tested systematically for templates of different lengths to determine the exact relationship between the factors involved. The results can then be added to the POPCode oligo design software to automatically report the most suitable protocol for each case to the experimenter.
+(2) Variant clone pools for longer genes must be kept in larger volumes at all times to avoid bottlenecking the complexity of the pools.
+(3) Finally, larger libraries also require more sequencing reads to cover all variants at adequate depth. Thus they either require the use of higher-throughput equipment or would have to be processed in batches. 
+A relatively easy solution to all three problems would be subdivide longer genes into sections that would be scanned separately from each other, although this would be more time consuming and costly.
+
+A more difficult problem is that currently, the number of genes amenable to functional complementation in yeast is very limited. Song Sun and other members of the Roth lab have previously determined that only 60 human disease genes can currently been examined using this assay~\cite{sun_extended_2016}. In addition, we found that some of these genes suffer from mapping quality issues. We observed this in the \gene{NCS1} map, which was of lower quality compared to other genes due to its relatively weak wildtype complementation fitness resulting in a less favourable signal-to-noise ratio. However it is possible that these assays might be improved by using different yeast strains with different backgrounds or by using different growth conditions.
+Moreover, as mentioned in section~\ref{ch2discussion} of the previous chapter, we have determined that 57\% of disase genes could be assayed using DMS variants based on Y2H or human cell lines instead, as will be discussed in further detail in the next section.
+
 
 \section{Outlook}
 
-\subsection{DMS in human cell lines}
+\subsection{Using DMS data in a clinical context}
+%DMS in clinical contexts
+As introduced in chapter 1, a major motivation factor behind the development of our framework is to address the growing problem of variants of uncertain significance observed in the clinic. While our results show that functional maps as produced by our framework can be helpful in the effort of VUS reclassification, a single line of evidence is not usually sufficient. Even though the ACMG considers functional assays among the strongest classification criteria, they require at least one additional criterium of moderate strength, such as enrichment in cases over controls, or negligible allele frequency in the general population~\cite{richards_standards_2015}. While most of the information informing the required criteria cannot be generated \textit{en masse}, other information, such as allele frequencies in the general population are available from the 1000 genomes project~\cite{the_1000_genomes_project_consortium_global_2015} and the genome and exome aggregation database (GnomAD)~\cite{lek_analysis_2016}. Thus an important goal for the future would be the construction of a public database with an underlying automatic data integration and classification system, that obtains information from available sources and automatically applies the ACMG's recommended decision-making process towards variant classification. Classification results should be presented transparently, revealing the individual underlying evidence, confidence levels and reasoning structure. 
+
+However, the commitment towards the construction of a resource is only warranted if its primary source of information, functional maps generated using Deep Mutational Scanning can continue to be provided. The Roth Lab is planning to continue building functional maps of disease genes and to expand the list of genes amenable to deep mutational scanning. A shortlist of $\sim$100 genes is planned to be addressed in the coming years. However, this undertaking is a costly one. Per 500 amino acid positions scanned, approximately \$5500 need to be spent on consumables, primarily for sequencing and oligos for POPCode mutagenesis. Assuming 6 genes being scanned in parallel, approximately 45 full-time employee hours need to be invested per gene. Ultimately, this undertaking cannot be stemmed by one lab alone and will require outreach to other groups. As shown in chapter~1 section~\ref{dmsIntro} a fair amount of groups are already performing deep mutational scans, who may be interested in collaboration. As a first step, the Roth and Fowler labs are already planning on collaborating with respect to mapping a number of heart-disease associated genes.
+
+\subsection{Adaptation and extentions to DMS technology}
+\subsubsection{DMS in human cell lines}
+As mentioned above, an important future direction is the adaptation of the deep mutational scanning framework toward directly using human cell lines in the competition assays. Recent genome-wide CRISPR screens have revealed a sizable number of genes with growth phenotypes in different human cell lines~\ref{?}~todo{REF}. While a number of DMS efforts have already been performed using human cells~\cite{forsyth_deep_2013,wagenaar_resistance_2014,doud_site-specific_2015,majithia_prospective_2016}, the underlying assays were not generalizable, for example, the most recent effort by Majithia and colleagues~\cite{majithia_prospective_2016} for PPAR$\gamma$ was only possible due to the fortuitous circumstances of having found a surface marker whose expression level directly reflects PPARG$\gamma$ activity. 
+Atina Cote in the Roth Lab is currently working on establishing a generalizable growth-based assay using CRISPR in human cell lines. 
 %previous work: PPARG
 %atina's CRISPR lines
 %fowler's stability assay
 
-\subsection{Screening of other functional elements}
+\subsubsection{Screening of other functional elements}
+Another important future direction is to expand the capability of Deep Mutational Scanning to enable the assaying of variants outside of protein-coding regions of the genome. However, since the space of the human genome is simply too large to be tested in its entirety the logical choice is to concentrate on elements most likely to be functionally relevent, such as splice sites, promoters, or transcription factor binding sites.
+Hanane Ennajdaoui in the Roth Lab is currently working on adapting our DMS framework to scan intron boundaries.
 %spliceDMS
 
+\subsection{Other uses of DMS functional map data}
+
+\subsubsection{Screening for viral suppressors}
+%UBE2I as viral target
+
+\subsubsection{Advances in computational prediction of disease variants}
 %extrapolation
 %  -> FUNSUM
-\subsection{Functional classification of amino acid positions}
+
+\subsubsection{Functional classification of amino acid positions}
+
 %clustering of AA positions
 % -> functional classes
-
-
