--- a/introduction.tex
+++ b/introduction.tex
@@ -55,6 +55,7 @@ The only major drawback of yeast complementation is that currently only 60 human
 
 
 \section{Deep Mutational Scanning}
+\label{dmsIntro}
 
 Complementation and Y2H promise to be useful tools in the classification of variants of uncertain significance. Yet applying them to retroactively test variants only once they have been found in the clinic would be a slow process. Instead, a proactive approach could prove to be more useful: Building an atlas of the functional effects of all possible variants before they are observed in a patient. Indeed, given the size of the human population and the frequency of \textit{de novo} mutation, every missense variant that can possibly exist (and is not fundamentally incompatible with life) can be expected to occur on average in 40 individuals~\todo{REF}. However, assaying all possible variants in known disease genes would require a massive parallelization. Indeed such parallelization efforts have previously been described, albeit not for the reclassification of VUS. Fowler and colleagues have pioneered a technology called Deep Mutational Scanning (DMS)~\cite{fowler_high-resolution_2010}, which can be thought of as a natural extension to Alanine Scanning~\cite{cunningham_high-resolution_1989}, expanding it into the space of all possible amino acid changes. Fowler \etal's original paper has since inspired a fair number of similar efforts by other groups~\cite{ernst_coevolution_2010,hietpas_experimental_2011,fujino_robust_2012,adkar_protein_2012,mclaughlin_jr_spatial_2012,schlinkmann_critical_2012,whitehead_optimization_2012,traxlmayr_construction_2012,wu_systematic_2013,roscoe_analyses_2013,starita_activity-enhancing_2013,procko_computational_2013,tinberg_computational_2013,jiang_latent_2013,kim_high-throughput_2013,melamed_deep_2013,forsyth_deep_2013,wagenaar_resistance_2014,firnberg_comprehensive_2014,olson_comprehensive_2014,melnikov_comprehensive_2014,bloom_experimentally_2014,thyagarajan_inherent_2014,stiffler_evolvability_2015,doud_site-specific_2015,kitzman_massively_2015,starita_massively_2015,mishra_systematic_2016,doud_accurate_2016,mavor_determination_2016,majithia_prospective_2016}. Tables~\ref{table:DMSstudiesTP} and \ref{table:DMSstudiesMethods} list a selection of these studies that showcase the breadth of methodologies that has since emerged. 
 Deep Mutational Scanning, as performed in these studies, can be broken down into a number of experimental and computational components: (1) Mutagenesis; (2) Selection of functional variants; (3) Sequencing of the selected and control populations; and (4) Computational analysis. In the following, we will review the different previous implementations of these components in detail.
