--- a/thesis.bib
+++ b/thesis.bib
@@ -2302,3 +2302,22 @@ Genet Med 17 5, 405–423.},
 	pages = {405--423},
 	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/GTJJUEF6/Richards et al. - 2015 - Standards and guidelines for the interpretation of.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/WSUIUEBN/gim201530a.html:text/html}
 }
+
+@article{varadaraj_sumo_2014,
+	title = {{SUMO} {Ubc}9 enzyme as a viral target},
+	volume = {66},
+	issn = {1521-6551},
+	url = {http://onlinelibrary.wiley.com/doi/10.1002/iub.1240/abstract},
+	doi = {10.1002/iub.1240},
+	abstract = {Viruses alter specific host cell targets to counteract possible defense mechanisms aimed at eliminating infectivity and viral propagation. The SUMO conjugating enzyme Ubc9 functions as a hub for protein sumoylation, whilst also providing an interactive surface for sumoylated proteins through noncovalent interactions. The targeting of Ubc9 by viruses and viral proteins is thus highly beneficial for the disruption of both protein modification and protein-protein interaction mechanisms with which proteins increase their functional repertoire in cells. This review explores some of the clever mechanisms adopted by viruses to deregulate Ubc9, influence effector pathways and positively impact viral persistence consequently. © 2014 IUBMB Life, 66(1):27–33, 2014},
+	language = {en},
+	number = {1},
+	urldate = {2017-03-05},
+	journal = {IUBMB Life},
+	author = {Varadaraj, Archana and Mattoscio, Domenico and Chiocca, Susanna},
+	month = jan,
+	year = {2014},
+	keywords = {SUMO, SUMO UBC9 enzyme, viral proteins},
+	pages = {27--33},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/G3T9PAWE/Varadaraj et al. - 2014 - SUMO Ubc9 enzyme as a viral target.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/5BIECUPG/abstract.html:text/html}
+}
